Fixed horizontal overflow on small screens
It was because the hamburger images were too big.

--- a/styles.scss
+++ b/styles.scss
@@ -69,6 +69,7 @@
  *::after {
    box-sizing: border-box;
    margin: 0;
+   padding: 0;
    font-family: "Speedee", Arial, Helvetica, sans-serif;
  }
 
@@ -81,6 +82,27 @@
    text-decoration: none;
  }
 
+ // Bottom SVG 
+
+ body {
+  position: relative;
+  width: 100%;
+  height: 100%;
+
+  .svg {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    z-index: -1;
+   
+    svg {
+      max-width: $max-width;
+      min-width: $min-width;
+    }
+  }
+}
 
  // Navbar 
  .navbar {
@@ -296,8 +318,8 @@
     max-width: $max-width;
    
    .hamburger {
-     height: 180px;
-     width: 180px;
+     height: 150px;
+     width: 150px;
      opacity: 95%;
    }
 
@@ -332,27 +354,17 @@
     text-align: center;
   }
  }
+ 
+ @media screen and (min-width: 528px) {
 
- // Bottom SVG 
+  .text {
 
- body {
-   position: relative;
-   width: 100vw;
-   height: 100%;
-   overflow-y: scroll;
-   overflow-x: hidden;
+    .flexbox {
 
-   .svg {
-     position: absolute;
-     bottom: 0;
-     width: 100%;
-     display: flex;
-     justify-content: center;
-     z-index: -1;
-    
-     svg {
-       max-width: $max-width;
-       min-width: $min-width;
-     }
-   }
+      .hamburger{
+        height: 190px;
+        width: 190px;
+      }
+    }
+  }
  }
